# trello-reports

./: .env_example  .envrc  .flake8  LICENSE  Pipfile  README.md  noxfile.py  pyproject.toml  weekly-todo-report.py
.github/workflows/: ci.yaml  pipeline.yaml  publish.yaml  test-pypi.yaml
tests/: test_cli.py  test_reports.py  test_trello_reports.py
trello_reports/: cli.py  reports.py
